# sqlsurge

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PUBLISHING.md  README.md  dist-workspace.toml
.github/workflows/: auto-tag.yml  ci.yml  release.yml
crates/sqlsurge-cli/: Cargo.toml
crates/sqlsurge-cli/src/: args.rs  config.rs  main.rs
crates/sqlsurge-cli/src/output/: mod.rs
crates/sqlsurge-core/: Cargo.toml
crates/sqlsurge-core/src/: error.rs  lib.rs
crates/sqlsurge-core/src/analyzer/: mod.rs  resolver.rs  type_resolver.rs
crates/sqlsurge-core/src/dialect/: mod.rs
crates/sqlsurge-core/src/schema/: builder.rs  catalog.rs  mod.rs
crates/sqlsurge-core/src/types/: mod.rs
crates/sqlsurge-core/tests/: analyzer_tests.rs
scripts/: release.sh
tests/fixtures/: invalid_query.sql  schema.sql  valid_query.sql
tests/fixtures/real-world/: THIRD-PARTY-LICENSES.md  chinook-invalid-queries.sql  chinook-mysql-invalid-queries.sql  chinook-mysql-queries.sql  chinook-mysql-schema.sql  chinook-queries.sql  comprehensive-test-schema.sql  northwind-invalid-queries.sql  northwind-queries.sql  pagila-invalid-queries.sql  pagila-queries.sql  postgres-advanced-test.sql  postgres-expr-test.sql  postgres-patterns-test.sql  sakila-mysql-invalid-queries.sql  sakila-mysql-queries.sql  sakila-mysql-schema.sql  sakila-queries.sql  webknossos-invalid-queries.sql  webknossos-queries.sql
