[package]
name = "sqlsurge-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for SQL static analysis against schema definitions"

[[bin]]
name = "sqlsurge"
path = "src/main.rs"

[dependencies]
sqlsurge-core.workspace = true
sqlparser.workspace = true
clap.workspace = true
miette.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
glob.workspace = true
