[package]
name = "sqlsurge-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for SQL static analysis against schema definitions"

[dependencies]
sqlparser.workspace = true
thiserror.workspace = true
miette.workspace = true
serde.workspace = true
indexmap.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions = "1.4"
